chore(mvn): moving to 4.1 snap